<resources>
    <string name="app_name">DungeonCrawler</string>
    <string name="up">up</string>
    <string name="left">left</string>
    <string name="down">down</string>
    <string name="right">right</string>
    <string name="interact">interact</string>
    <string name="main_character">tendril</string>
    <string name="tendril">main character</string>
    <string name="start_game">Start Game</string>
    <string name="main_menu">Main Menu</string>
    <string name="background">background</string>
    <string name="ground">ground</string>
    <string name="treasure">treasure</string>
    <string name="gold">Gold: %1$d</string>
    <string name="health">HP: %1$d</string>
    <string name="attack">Attack: %1$d</string>
    <string name="defense">Defense: %1$d</string>
    <string name="upgrade">+%1$d</string>
    <string name="minus">-%1$d</string>
    <string name="level">Level: %1$s</string>
    <string name="victory">Victory!</string>
    <string name="paused_title">Game Paused</string>
    <string name="highscore">Highscore:</string>
    <string name="returnToGame">Return to game</string>
    <string name="giveUp">Give Up</string>
    <string name="restart">Restart</string>
    <string name="returnToMain">Return</string>
    <string name="applyAndReturn">Apply Upgrades and Return</string>
    <string name="reset">Reset</string>
    <string name="ladder">ladder</string>
    <string name="final_score_message">You earned %1$s gold!</string>
    <string name="killed_by_message">Killed by </string>
    <string name="enemy">Enemy</string>
    <string name="game_over">Game Over</string>
    <string name="coin">coin</string>
    <string name="diamond_sword">Diamond Sword</string>
    <string name="wooden_sword">wooden Sword</string>
    <string name="wooden_bow">wooden Bow</string>
    <string name="rag">Rag</string>
    <string name="iron_cuirass">Iron Cuirass</string>
    <string name="bomb">Bomb</string>
    <string name="diamond_cuirass">Diamond Cuirass</string>
    <string name="potion">potion</string>
    <string name="upgrade_stats">Upgrade Stats</string>
    <string name="arrow">Arrow</string>
    <string name="levelObject">a level object</string>
    <string name="bombTutorialTitle">Bomb Usage</string>
    <string name="bombTutorialText">To place bombs, long press the action button. Then wait from a distance and see what happens.</string>
    <string name="bombTutorialButton">Got it!</string>
</resources>